fix nav spacing

--- a/views/styles/_login.scss
+++ b/views/styles/_login.scss
@@ -16,12 +16,11 @@ header {
     ul {
       padding: 20px 0 20px 0;
       display: flex;
-      justify-content: center;
+      justify-content: space-evenly;
       margin: 0;
       text-align: center;
 
       li {
-        padding: 0 50px 0 50px;
         list-style: none;
 
         a {
