--- a/views/styles/style.css
+++ b/views/styles/style.css
@@ -17,12 +17,11 @@ header nav {
 header nav ul {
   padding: 20px 0 20px 0;
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   margin: 0;
   text-align: center;
 }
 header nav ul li {
-  padding: 0 50px 0 50px;
   list-style: none;
 }
 header nav ul li a {
